--- a/t/vue/survey/public/index.html
+++ b/t/vue/survey/public/index.html
@@ -9,9 +9,9 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Material Design Bootstrap -->
-    <link href="css/mdb.min.css" rel="stylesheet">
+    <!-- <link href="css/mdb.min.css" rel="stylesheet"> -->
     <!-- Your custom styles (optional) -->
     <link href="css/style.min.css" rel="stylesheet">
   </head>
@@ -23,17 +23,20 @@
     <!-- built files will be auto injected -->
 
 
-    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
+    <!-- <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script> -->
     <script type="text/javascript" src="js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <!-- <script type="text/javascript" src="js/bootstrap.min.js"></script> -->
+    <!-- <script type="text/javascript" src="js/mdb.min.js"></script> -->
+    
     <!-- Initializations -->
     <script type="text/javascript">
         // Animations initialization
-        new WOW().init();
+        try {
+          if (WOW)
+            new WOW().init();
+        } catch (Err) { 
+          // console.error("Error on WOW!!", Err)
+        }
     </script>
   </body>
 </html>
